Fixed bug #64353 (Built-in classes can be unavailable with dynamic includes and Optimizer+)